# pfe-recsys-ads

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: settings.py
deploy/: gcp_deploy.sh
experiments/: README.md  benchmark_large_k.py  best_across_policies.py  exact_moo_comparison.py  generate_delta_joint_plot.py  global_comparison.py  mega_semantic_comparison.py  moo_benchmark.py  offline_simulation.py  plot_ips_convergence.py  realtime_simulation.py  regenerate_best_plots.py  run_ips_benchmark.py  zero_shot_demo.py
metrics/: eng_matrix.csv  realtime_simulation_metrics.csv  rev_matrix.csv  time_matrix.csv  trajectories_best_policy.json
rapport_pfe/: biblio.bib  chapitre_3.tex  chapitre_4.tex  chapitre_4_pandoc.tex  conclusion_generale.tex  conclusion_generale_pandoc.tex  main.tex  rapport_pfe_updated.docx
src/: README.md
src/agents/: base_agent.py  base_moo_agent.py  deep_bandit_agent.py  delayed_feedback_agent.py  global_semantic_linucb.py  global_semantic_neural.py  global_semantic_others.py  linucb_agent.py  multi_obj_agent.py  neural_ts_agent.py  neural_ucb_agent.py  offline_online_agent.py  redis_linucb_agent.py  thompson_sampling_agent.py
src/agents/llm_agents/: __init__.py  base_llm_agent.py  deep_think_agent.py  hybrid_linucb_agent.py  pro_agent.py
src/api/: __init__.py  main.py  recommendation_service.py  schemas.py
src/env/: context_generator.py  reward_simulator.py
src/env/semantic_env/: semantic_reward_simulator.py  (+1 more)
src/evaluation/: ips_evaluator.py
src/infra/: __init__.py  factory.py  kafka_messenger.py  pubsub_client.py  redis_client.py
src/llm/: gemini_client.py  ollama_client.py  sentence_transformer_client.py
src/policy/: moo_policies.py  pareto_utils.py
src/streaming/: consumer.py
src/utils/: math_utils.py
tests/: test_env.py  test_integration.py  test_kafka_messenger.py  test_load.py  test_math_utils.py  test_moo.py  test_realtime_simulation.py  test_redis_client.py  test_redis_linucb.py
(+9 files in other folders)
