[project]
name = "pfe-recsys-ads"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.13.3",
    "confluent-kafka>=2.13.0",
    "fastapi>=0.135.1",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",
    "jupyterlab>=4.5.3",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "obp>=0.4.1",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "pymupdf>=1.27.1",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    "river>=0.19.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.2.3",
    "torch>=2.10.0",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]
